fix: alignment

--- a/style.css
+++ b/style.css
@@ -648,9 +648,12 @@ header {
     margin-top:32px;
 }
 
-.value-title {
+.value__title {
     display: flex;
     align-items: center;
+    justify-content: center;
+    gap: 12px;
+    margin-bottom: 16px;
 }
 
 .value:nth-child(1) .value__img--wrapper {
